--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,25 @@
+# Windows image file caches
+Thumbs.db
 
+# Folder config file
+Desktop.ini
+
+# Mac noise
 .DS_Store
+profile
+
+# xcode noise
+build/*
+*.mode1
+*.mode1v3
+*.mode2v3
+*.perspective
+*.perspectivev3
+*.pbxuser
+*.xcworkspace
+xcuserdata
+
+# svn & cvs
 .svn
+CVS
+
